2013-03-07
----------

Added a test utility for measuring the
speed of the different generators


2013-03-05
----------

Added the 64-bits implementation of the
WELL generator. Although it still needs
to have information in its source code.


2013-03-04
----------

Modified the Makefile, now it also creates
a library that you can link using -lrands
and pointing with -L to wherever librands.a
is (^_^)


2013-03-01
----------

Changed the form of the WELL generator after
I discovered how it worked

Added more information to the README


2013-02-22
----------

Initial commit of the basic structure
of the library, including the two first
generators: parisi-rapuano and WELL512

Added the Makefile and the Changelog