@@ -1,3 +1,9 @@
+2013-03-08
+----------
+
+Added a very simple version of the 
+Isaac random number generator.
+
 2013-03-07
 ----------
 
